cmake_minimum_required(VERSION 3.15)
project(HWaccess)

set(CMAKE_CXX_STANDARD 14)

add_executable(HWaccess main.cpp User.h Student.h LabEmplyee.h Professor.h Level.h Director.h Room.h classRoom.h LectureRoom.h ConferenceRoom.h Cabinet.h Admin.h Generate_elements.h Activity.h Guest.h cmake-build-debug Stuff.h)